# othello-coach

./: .coverage  .gitignore  GUI_TESTING_README.md  LICENSE  README.md  README_v1.1.md  _ui_smoke.py  coverage.xml  cpu_vs_cpu_fullgame_test.py  db_diagnostic.py  debug_gauntlet_move.py  debug_search.py  demo_notation.py  diagnose_rust.py  env.ps1  fix_db_issues.py  install_rust.py  pyproject.toml  pytest.ini  quick_db_check.py  requirements.txt  run.ps1  run_db_diagnostics.bat  run_gui.py  run_gui_tests.py  rust_build_info.json  setup.py  setup_logging.py  setup_rust_env.bat  test_advantage_display.py  test_advantage_fix.py  test_advantage_graph.py  test_db_manager.py  test_eval.py  test_gauntlet_performance.py  test_gui_quick.py  test_main_window.py  test_requirements.txt  tree.json  visual_test.py
othello_coach/: __init__.py  logging_setup.py  main.py
othello_coach.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
othello_coach/api/: __init__.py  auth.py  schemas.py  server.py
othello_coach/config/: defaults.toml
othello_coach/config/themes/: dark.json  high_contrast.json  light.json
othello_coach/config/web/: cytoscape.min.js  echarts.min.js  index.html
othello_coach/db/: migrate.py  postgres.py  queries.py  retention.py  schema.sql  schema_sql_loader.py  store.py  writer.py
othello_coach/engine/: bitboard.py  board.py  eval.py  movegen_fast.py  movegen_ref.py  notation.py  openings.py  perft.py  perft_pack.json  policies.py  search.py  solver.py  strength.py  tt.py
othello_coach/gauntlet/: __init__.py  calibration.py  gauntlet.py  glicko.py
othello_coach/gdl/: __init__.py  ast_nodes.py  parser.py  validator.py
othello_coach/insights/: __init__.py  features.py  overlays.py  rationale.py  taxonomy.py
othello_coach/novelty/: __init__.py  radar.py  shingles.py
othello_coach/openings/: __init__.py  book.json  recogniser.py
othello_coach/selfplay/: runner.py
othello_coach/tools/: api_cli.py  cli.py  diag.py  perft_cli.py  selfplay_cli.py  tree_build.py  tree_cli.py
othello_coach/trainer/: __init__.py  drills.py  scheduler.py  tactics.py  trainer.py
othello_coach/trees/: __init__.py  builder.py  export.py  presets.py
othello_coach/ui/: __init__.py  actions.py  advantage_graph.py  app.py  board_widget.py  game_controls.py  insights_dock.py  main_window.py  pygame_app.py  themes.py  training_dock.py  tree_view.py
roadmaps/: v1-0.txt  v1-1.txt
rust_kernel/: Cargo.toml  __init__.py  build.py
rust_kernel/src/: bitboards.rs  lib.rs  movegen.rs  popcount.rs  solver.rs  stability.rs
tests/: test_board_hash_and_undo.py  test_db_concurrency.py  test_eval_features.py  test_gauntlet.py  test_gdl_parser.py  test_gui_comprehensive.py  test_insights_and_rationales.py  test_movegen_crosscheck.py  test_notation.py  test_novelty_radar.py  test_perft.py  test_rust_acceleration.py  test_search_core.py  test_solver_exact.py  test_trainer.py  test_ui_smoke.py
