[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "othello_coach"
version = "0.1.0"
description = "Othello/Reversi AI Coach with GUI, self-play, database, and tree analysis"
authors = [{name = "Your Name"}]
requires-python = ">=3.11"
dependencies = [
  "pygame>=2.5",
]

[project.scripts]
othello-coach = "othello_coach.main:main"

[tool.setuptools]

[tool.setuptools.packages.find]
include = ["othello_coach*"]


