[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "othello-coach"
version = "1.1.0"
description = "Local Othello/Reversi coach: strong engine, insights, trees, and UI"
readme = "README.md"
# Broaden to support local Python 3.10 per tests and CI matrix
requires-python = ">=3.10,<3.13"
authors = [
  { name = "Othello Coach", email = "noreply@example.com" }
]
license = { file = "LICENSE" }
keywords = ["othello", "reversi", "engine", "gui", "coaching"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Games/Entertainment :: Board Games",
]

dependencies = [
  "PyQt6==6.7.*",
  "PyQt6-Qt6==6.7.*",
  "SQLAlchemy==2.0.*",
  "alembic==1.13.*",
  "rich==13.7.*",
  "orjson==3.10.*",
  "msgspec==0.18.*",
  "Jinja2==3.1.*",
  "hypothesis==6.112.*",
  "tomli==2.0.*",
  "fastapi==0.104.*",
  "uvicorn==0.24.*",
  "psycopg2-binary==2.9.*",
]

[project.optional-dependencies]
graphviz = ["pygraphviz==1.13.*"]
rust = ["rust_kernel"]

[project.urls]
Homepage = "https://example.com/othello-coach"
Repository = "https://example.com/othello-coach/repo"

[tool.setuptools]
packages = { find = { where = ["."], include = ["othello_coach*"], exclude = ["tests*"] } }
include-package-data = true

[tool.setuptools.package-data]
"othello_coach.config.web" = ["*.html", "*.js"]
"othello_coach.config.themes" = ["*.json"]
"othello_coach.openings" = ["*.json"]
"othello_coach.db" = ["*.sql"]
"othello_coach.engine" = ["perft_pack.json"]

[project.scripts]
othello-coach = "othello_coach.tools.cli:main"
othello-perft = "othello_coach.tools.perft_cli:main"
othello-tree = "othello_coach.tools.tree_cli:main"
othello-diag = "othello_coach.tools.diag:main"
othello-selfplay = "othello_coach.tools.selfplay_cli:main"
othello-api = "othello_coach.tools.api_cli:main"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
strict = false
